# BibleRunner-rs

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  result
data/: convert.js
resources/: com.jaanonim.bible_runner.service  install.sh  install_debug.sh  plasma-runner-bible_runner.desktop
src/: books.rs  main.rs
