[package]
name = "bible_runner"
version = "0.1.0"
edition = "2021"
authors = ["Jaanonim <mat8mro@gmail.com>"]
description = "Quickly lookup bible verses form KRunner."
repository = "https://github.com/jaanonim/BibleRunner-rs"
license = "MIT"

[package.metadata.krunner]
service = "com.jaanonim.bible_runner"
path = "/bible_runner"

[dependencies]
arboard = "3.4.0"
fancy-regex = "0.13.0"
krunner = { version = "0.1.1", features = ["tokio", "derive"] }
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1.5.0"
regex = "1.10.5"
serde_json = "1.0.120"
ureq = "2.10.0"
webbrowser = "1.0.1"
